# kmerization-cpp

./: CMakeCache.txt  CMakeLists.txt  README.md  genome.cpp  genome.h  kmerization.cpp
core/component/: index.cpp  index.h
core/component/proto/: generate.sh  index.pb.cc  index.pb.h  index.proto  matrix.pb.cc  matrix.pb.h
tests/: CMakeLists.txt
